# Calculator-dll

./: CMakeLists.txt  Calculator.cpp  Calculator.h  header.h  main.cpp
Calculator-helpers/: DLLHandler.cpp  DLLHandler.h  ExpressionParser.cpp  ExpressionParser.h
Lexeme/: Lexem.h  Number.cpp  Number.h
Lexeme/Operations/: Bracket.cpp  Bracket.h  Multiplication.cpp  Multiplication.h  Operation.h  Operations.cpp  Summation.cpp  Summation.h
LibSrc/: Powering.cpp  Powering.h  SinusOperation.cpp  SinusOperation.h  Subtraction.cpp  Subtraction.h
